<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cycle_bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_border"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/txt_cycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/exchange_period"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_cycle_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/cycle_description"
        android:textColor="#535251"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_cycle" />

    <ImageView
        android:id="@+id/img_cycle_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="23.62dp"
        android:contentDescription="@string/StringValue"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_everyday"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/cycle_border_left"
        android:contentDescription="@string/StringValue"
        android:text="@string/everyday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_cycle_description" />


    <Button
        android:id="@+id/btn_everyweek"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/cycle_border_center"
        android:contentDescription="@string/StringValue"
        android:text="@string/everyweek"
        app:layout_constraintStart_toEndOf="@id/btn_everyday"
        app:layout_constraintTop_toBottomOf="@id/txt_cycle_description" />

    <Button
        android:id="@+id/btn_everymonth"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/cycle_border_right"
        android:contentDescription="@string/StringValue"
        android:text="@string/everymonth"
        app:layout_constraintStart_toEndOf="@id/btn_everyweek"
        app:layout_constraintTop_toBottomOf="@id/txt_cycle_description" />


    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="77dp"
        android:progressDrawable="@drawable/custom_seekbar"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_everyday" />

    <TextView
        android:id="@+id/txt_first_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek_bar"
        tools:text="1일" />

    <TextView
        android:id="@+id/txt_last_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek_bar"
        tools:text="31일" />


    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_border"
        android:text="@string/confirm"
        android:textColor="#A2ABAD"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek_bar" />

    <Button
        android:id="@+id/btn_confirm_click"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_click_border"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>